--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -20,7 +20,7 @@ builds:
       - -w
       - -extldflags
       - -static
-      - -X main.Version={{.Version}}
+      - -X main.Version={{.Version}}-pkv
     tags:
       - netgo
       - osusergo
@@ -58,9 +58,9 @@ dockers:
     goos: linux
     goarch: amd64
     image_templates:
-    - "superseriousbusiness/{{ .ProjectName }}:{{ .Version }}-amd64"
-    - "superseriousbusiness/{{ .ProjectName }}:latest-amd64"
-    - "{{ if .IsSnapshot }}superseriousbusiness/{{ .ProjectName }}:snapshot-amd64{{ end }}"
+    - "ghcr.io/parkour-vienna/{{ .ProjectName }}:{{ .Version }}-amd64"
+    - "ghcr.io/parkour-vienna/{{ .ProjectName }}:latest-amd64"
+    - "ghcr.io/parkour-vienna/{{ .ProjectName }}:snapshot-amd64"
     build_flag_templates:
     - "--platform=linux/amd64"
     - "--label=org.opencontainers.image.created={{.Date}}"
@@ -78,9 +78,9 @@ dockers:
     goos: linux
     goarch: arm64
     image_templates:
-    - "superseriousbusiness/{{ .ProjectName }}:{{ .Version }}-arm64v8"
-    - "superseriousbusiness/{{ .ProjectName }}:latest-arm64v8"
-    - "{{ if .IsSnapshot }}superseriousbusiness/{{ .ProjectName }}:snapshot-arm64v8{{ end }}"
+    - "ghcr.io/parkour-vienna/{{ .ProjectName }}:{{ .Version }}-arm64v8"
+    - "ghcr.io/parkour-vienna/{{ .ProjectName }}:latest-arm64v8"
+    - "ghcr.io/parkour-vienna/{{ .ProjectName }}:snapshot-arm64v8"
     build_flag_templates:
     - "--platform=linux/arm64/v8"
     - "--label=org.opencontainers.image.created={{.Date}}"
@@ -99,9 +99,9 @@ dockers:
     goarch: arm
     goarm: 6
     image_templates:
-    - "superseriousbusiness/{{ .ProjectName }}:{{ .Version }}-armv6"
-    - "superseriousbusiness/{{ .ProjectName }}:latest-armv6"
-    - "{{ if .IsSnapshot }}superseriousbusiness/{{ .ProjectName }}:snapshot-armv6{{ end }}"
+    - "ghcr.io/parkour-vienna/{{ .ProjectName }}:{{ .Version }}-armv6"
+    - "ghcr.io/parkour-vienna/{{ .ProjectName }}:latest-armv6"
+    - "ghcr.io/parkour-vienna/{{ .ProjectName }}:snapshot-armv6"
     build_flag_templates:
     - "--platform=linux/arm/v6"
     - "--label=org.opencontainers.image.created={{.Date}}"
@@ -120,9 +120,9 @@ dockers:
     goarch: arm
     goarm: 7
     image_templates:
-    - "superseriousbusiness/{{ .ProjectName }}:{{ .Version }}-armv7"
-    - "superseriousbusiness/{{ .ProjectName }}:latest-armv7"
-    - "{{ if .IsSnapshot }}superseriousbusiness/{{ .ProjectName }}:snapshot-armv7{{ end }}"
+    - "ghcr.io/parkour-vienna/{{ .ProjectName }}:{{ .Version }}-armv7"
+    - "ghcr.io/parkour-vienna/{{ .ProjectName }}:latest-armv7"
+    - "ghcr.io/parkour-vienna/{{ .ProjectName }}:snapshot-armv7"
     build_flag_templates:
     - "--platform=linux/arm/v7"
     - "--label=org.opencontainers.image.created={{.Date}}"
@@ -136,24 +136,24 @@ dockers:
     - cmd
     - internal
 docker_manifests:
-  - name_template: superseriousbusiness/{{ .ProjectName }}:{{ .Version }}
+  - name_template: ghcr.io/parkour-vienna/{{ .ProjectName }}:{{ .Version }}
     image_templates:
-    - superseriousbusiness/{{ .ProjectName }}:{{ .Version }}-amd64
-    - superseriousbusiness/{{ .ProjectName }}:{{ .Version }}-arm64v8
-    - superseriousbusiness/{{ .ProjectName }}:{{ .Version }}-armv6
-    - superseriousbusiness/{{ .ProjectName }}:{{ .Version }}-armv7
-  - name_template: superseriousbusiness/{{ .ProjectName }}:latest
+    - ghcr.io/parkour-vienna/{{ .ProjectName }}:{{ .Version }}-amd64
+    - ghcr.io/parkour-vienna/{{ .ProjectName }}:{{ .Version }}-arm64v8
+    - ghcr.io/parkour-vienna/{{ .ProjectName }}:{{ .Version }}-armv6
+    - ghcr.io/parkour-vienna/{{ .ProjectName }}:{{ .Version }}-armv7
+  - name_template: ghcr.io/parkour-vienna/{{ .ProjectName }}:latest
     image_templates:
-    - superseriousbusiness/{{ .ProjectName }}:latest-amd64
-    - superseriousbusiness/{{ .ProjectName }}:latest-arm64v8
-    - superseriousbusiness/{{ .ProjectName }}:latest-armv6
-    - superseriousbusiness/{{ .ProjectName }}:latest-armv7
-  - name_template: "{{ if .IsSnapshot }}superseriousbusiness/{{ .ProjectName }}:snapshot{{ end }}"
+    - ghcr.io/parkour-vienna/{{ .ProjectName }}:latest-amd64
+    - ghcr.io/parkour-vienna/{{ .ProjectName }}:latest-arm64v8
+    - ghcr.io/parkour-vienna/{{ .ProjectName }}:latest-armv6
+    - ghcr.io/parkour-vienna/{{ .ProjectName }}:latest-armv7
+  - name_template: ghcr.io/parkour-vienna/{{ .ProjectName }}:snapshot
     image_templates:
-    - superseriousbusiness/{{ .ProjectName }}:snapshot-amd64
-    - superseriousbusiness/{{ .ProjectName }}:snapshot-arm64v8
-    - superseriousbusiness/{{ .ProjectName }}:snapshot-armv6
-    - superseriousbusiness/{{ .ProjectName }}:snapshot-armv7
+    - ghcr.io/parkour-vienna/{{ .ProjectName }}:snapshot-amd64
+    - ghcr.io/parkour-vienna/{{ .ProjectName }}:snapshot-arm64v8
+    - ghcr.io/parkour-vienna/{{ .ProjectName }}:snapshot-armv6
+    - ghcr.io/parkour-vienna/{{ .ProjectName }}:snapshot-armv7
 archives:
   # https://goreleaser.com/customization/archive/
   -
